sendto-extension: Check for available mail client

The sendto extension now checks for an available client
supported by nautilus sendto and conditionaly adds the
"Email" option to the file menu list.

https://bugzilla.gnome.org/show_bug.cgi?id=701653